# rustCraft

./: .gitignore  .gitmodules  .ignore  build.sh  exportLib.py
mappingsMod/: .gitignore  build.gradle  gradle.properties
mappingsMod/src/main/java/fr/supersurviveur/mappingsmod/: ASMUtils.java  Mappingsmod.java  Modifiers.java
mappingsMod/src/main/resources/: fabric.mod.json
rustCraftMod/: .gitignore  LICENSE.txt  build.gradle  gradle.properties
rustCraftMod/src/client/resources/: rustcraftmod.client.mixins.json
rustCraftMod/src/main/resources/: fabric.mod.json  rustcraftmod.mixins.json
rustcraft/: .gitignore  Cargo.toml  buildMod.bat
rustcraft/assets/tutorial/models/item/: example_block.json
rustcraft/rustcraft_codegen/: Cargo.toml
rustcraft/rustcraft_codegen/src/: lib.rs  main.rs
rustcraft/rustcraft_codegen/src/to_java/: mod.rs
rustcraft/rustcraft_mappings/: Cargo.toml  build.rs
rustcraft/rustcraft_mappings/src/: codegen.rs  lib.rs  main.rs
rustcraft/rustcraft_mappings_gen/: Cargo.toml
rustcraft/rustcraft_mappings_gen/.helix/: config.toml
rustcraft/rustcraft_mappings_gen/src/: lib.rs
rustcraft/src/: api.rs  block_pos.rs  lib.rs  minecraft_server.rs  object.rs  player_manager.rs  prelude.rs  registry.rs  world.rs
rustcraft/src/api/: mod.rs  object.rs
rustcraft/src/api/block/: action_result.rs  block.rs  mod.rs  prelude.rs
rustcraft/src/block/: action_result.rs  mod.rs  prelude.rs
rustcraft/src/prelude/: mod.rs
tests/: Cargo.toml  rustcraft_test-0030060.mm_profdata
tests/src/: add_block.rs  lib.rs
(+12 files in other folders)
