[package]
name = "rustcraft_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "^1.0"
proc-macro2 = "1.0"
syn = { version = "^1.0", features = ["full"] }
proc-macro-error = "1"
prettyplease = "0.2.29"

rustcraft_mappings = { path = "../rustcraft_mappings" }

[lib]
proc-macro = true
